# Balancer

./: .gitignore  README.md  giho's Note.txt  patch-rules.md
Files/: Banlacing 견적.xlsx  호호이 브라켓 최종.dwg
balancing_robot/: CMakeLists.txt
balancing_robot/scripts/: sensor_test.py
balancing_robot/src/morot_control/: motor_test.cpp
catkin_ws/: BitBangSPI.cpp  BitBangSPI.h
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/turtlebot3_applications_msgs/: PanoramaImg.h  SetFollowStateRequest.h  SetFollowStateResponse.h  TakePanoramaRequest.h  TakePanoramaResponse.h
catkin_ws/devel/lib/ar_track_alvar/: createMarker  findMarkerBundles  findMarkerBundlesNoKinect  individualMarkers  individualMarkersNoKinect  trainMarkerBundle
catkin_ws/devel/lib/ddynamic_reconfigure/: ddynamic_reconfigure_auto_update_test  fake_dynamic_reconfigure_server  (+1 more)
catkin_ws/motor_controller/: CMakeLists.txt  package.xml
catkin_ws/motor_controller/launch/: motor_controller.launch
catkin_ws/motor_controller/src/: mcp4921.cpp  motor_controller.cpp  spi_controller.cpp
catkin_ws/src/balance_robot_nodes/: CMakeLists.txt  PROJECT_SUMMARY.md  package.xml  setup_environment.sh
catkin_ws/src/led_blink/: CMakeLists.txt
catkin_ws/src/motor_controller/: CMakeLists.txt  README.md  README_MOTOR_CONTROL.md
docs/: Balancing 3d Model.bak  Balancing 3d Model.dwg  Banlacing 견적.xlsx
docs/kicad/blancing_board/: blancing_board.kicad_pcb  blancing_board.kicad_pro
docs/kicad/blancing_power/: blancing_power.kicad_pcb  blancing_power.kicad_pro  blancing_power.kicad_sch  fp-lib-table
docs/motor_test/test_1/: motor_test_1_1749901913.csv  motor_test_3_1749901958.csv  motor_test_5_1749902016.csv
docs/motor_test/test_2/: motor_test_1_1749902902.csv  motor_test_2_1749902919.csv  motor_test_3_1749902940.csv
docs/motor_test/test_4/: motor_test_1_1749910604.csv  motor_test_3_1749910651.csv  motor_test_4_1749910691.csv  motor_test_5_1749910783.csv
docs/개발과정/: 2025-05-10-프로젝트 생성.md  2025-05-24-JetsonNano-gyro-add.md  2025-08-29-IP주소 바뀔때 대처법.md  2025-08-30-밸런싱 첫 안정화.md
motor_test/test_1/: motor_test_2_1749901933.csv  motor_test_4_1749901995.csv
motor_test/test_2/: motor_test_4_1749906703.csv  motor_test_5_1749906724.csv
motor_test/test_4/: motor_test_2_1749910630.csv
robot_board/blancing_board/: blancing_board.kicad_prl  blancing_board.kicad_pro  blancing_board.kicad_sch  hall_sensor.kicad_sch
robot_board/blancing_power/: blancing_power.kicad_prl  fp-info-cache  sym-lib-table
src/balance_robot_nodes/: CMakeLists.txt  README.md
src/balance_robot_nodes/include/balance_robot_nodes/: i2c_sensor_node.h  smooth_controller.h
src/balance_robot_nodes/launch/: balance_robot_compatible.launch  test_all_nodes.launch  test_hardware_only.launch  test_i2c_only.launch  test_sensors_only.launch
src/balance_robot_nodes/msg/: MotorStatus.msg
src/balance_robot_nodes/src/: smooth_controller.cpp
src/led_blink/: package.xml
src/motor_controller/: CMakeLists.txt
src/motor_controller/launch/: .motor_controller.launch.swp  motor_controller.launch
src/motor_controller/scripts/: motor_control.py
src/motor_controller/src/: dual_motor_test.cpp  i2c_controller.cpp  motor_controller.cpp  motor_response_test.cpp  smooth_motor_controller.cpp  spi_controller.cpp  test_smooth_control.cpp
개발과정/: 2025-05-10-Jetson Nano JetPack 설치 가이드.md  2025-05-10-프로젝트 생성.md  2025-05-12-JetsonNano Blink.md  2025-06-02-JetsonNano-HardwareDev.md
(+123 files in other folders)
